# flutter_sequencer

./: .gitignore  .gitmodules  .metadata  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
android/: .gitignore  CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: Plugin.cpp
android/src/main/cpp/AndroidEngine/: AndroidEngine.cpp  AndroidEngine.h
android/src/main/cpp/AndroidInstruments/: Mixer.h  SoundFontInstrument.h
android/src/main/cpp/Engine/: IInstrument.h  IRenderableAudio.h  Mixer.h  SamplerInstrument.h  SoundFontInstrument.h
android/src/main/cpp/Utils/: AssetManager.h  Logging.h  OptionArray.h
android/src/main/kotlin/com/michaeljperri/flutter_sequencer/: FlutterSequencerPlugin.kt
cpp_test/: CMakeLists.txt  CMakeLists.txt.in
cpp_test/src/: buffer_tests.cpp  main.cpp
example/: .metadata  README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_sequencer_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/assets/sf2/: TR-808.sf2
example/assets/sfz/: GMPiano.sfz  SplendidGrandPiano.sfz  meanquar.scl
example/assets/sfz/samples/: Ab2.flac  Ab3.flac  C5.flac  C6.flac  Csharp2.flac  D1.flac  Db3.flac  Db4.flac  FF-C3.wv  FF-C4.wv  FF-F3.wv  Gb1.flac  Gb5.flac  MF-C3.wv  MF-C4.wv  MF-F3.wv  Mp-C3.wv  Mp-C4.wv  Mp-F3.wv
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: constants.dart  main.dart
example/lib/components/: position_view.dart  step_count_selector.dart  tempo_selector.dart  track_selector.dart  transport.dart
example/lib/components/drum_machine/: drum_machine.dart  volume_slider.dart
example/lib/components/drum_machine/grid/: cell.dart  grid.dart  label_row.dart
example/lib/models/: project_state.dart  step_sequencer_state.dart
example/test/: widget_test.dart
example_2/: README.md  pubspec.yaml
example_2/android/app/: build.gradle
example_2/android/app/src/main/: AndroidManifest.xml
example_2/android/app/src/main/kotlin/com/example/example_2/: MainActivity.kt
example_2/android/app/src/profile/: AndroidManifest.xml
example_2/ios/Runner/: Info.plist
example_2/lib/: beat_ticker_provider.dart  main.dart  sequence_controller.dart
example_2/test/: widget_test.dart
example_2/web/: index.html  manifest.json
ios/: .gitignore  flutter_sequencer.podspec  overrides.xcconfig  prepare.sh
ios/Classes/: AppleSamplerUtils.swift  AudioUnitUtils.swift  CocoaEngine.swift  DartUtils.swift  FlutterSequencerPlugin.h  FlutterSequencerPlugin.m  SwiftFlutterSequencerPlugin.swift
ios/Classes/AudioUnit/: AudioUnitUtils.swift  BufferedAudioBus.hpp  DSPKernel.hpp  DSPKernel.mm
ios/Classes/AudioUnit/Sfizz/: SfizzAU.swift  SfizzDSPKernel.hpp  SfizzDSPKernelAdapter.h  SfizzDSPKernelAdapter.mm
ios/Classes/CallbackManager/: CallbackManager.cpp  CallbackManager.h
ios/Classes/CocoaScheduler/: CocoaScheduler.cpp  CocoaScheduler.h
ios/Classes/IInstrument/: IInstrument.h  IRenderableAudio.h
ios/Classes/IInstrument/SharedInstruments/: SfizzSamplerInstrument.h
ios/Classes/Scheduler/: BaseScheduler.cpp  BaseScheduler.h  Buffer.h  SchedulerEvent.cpp  SchedulerEvent.h
lib/: constants.dart  global_state.dart  instrument.dart  native_bridge.dart  sequence.dart  sequence_controller.dart  sfz_parser.dart  track.dart
lib/models/: events.dart  instrument.dart  sample_descriptor.dart  sfz.dart
lib/utils/: isolate.dart
test/: flutter_sequencer_test.dart  sequence_controller_test.dart
